@@ -28,3 +28,4 @@
   25-Jun-2021  - V0.36 Update method prototype skipExisting -> skip in ChEMBLTargetActivityProvider().
   26-Jun-2021  - V0.37 Serialize DrugBank cofactors in pickle - resolve missing target names -
   26-Jun-2021  - V0.38 Make chemical component and BIRD definitions singular.
+  27-Jun-2021  - V0.39 Add diagnostics to capture statistics for ChEMBL and Pharos mapped an unmapped cofactors
